<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBackground"
    tools:context=".ui.transport.TransportFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorBackground">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorWhite"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:id="@+id/textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="5dp"
                android:text="@string/title_transport"
                android:textAppearance="@style/txt_title_b"
                android:textColor="@color/colorText"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/txt_city"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:layout_marginEnd="16dp"
                android:text="@string/title_city"
                android:textAppearance="@style/label"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <EditText
                android:id="@+id/search_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="16dp"
                android:layout_marginVertical="10dp"
                android:background="@drawable/button_bg10"
                android:backgroundTint="@color/colorBackground"
                android:drawableStart="@drawable/ic_baseline_search_24"
                android:hint="@string/search_text"
                android:paddingVertical="8dp"
                android:paddingStart="12dp"
                android:paddingEnd="12dp"
                app:layout_constraintBottom_toBottomOf="@+id/view"
                app:layout_constraintTop_toBottomOf="@+id/textView"/>

            <!-- todo заменить <EditText...></EditText> на <EditText... /> -->
        </androidx.constraintlayout.widget.ConstraintLayout>

        <!--    !!!todo использовать TabLayout!!!    -->

        <com.google.android.material.tabs.TabLayout
                android:id="@+id/tab_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginHorizontal="16dp"
                android:layout_marginTop="20dp"
                android:background="@drawable/button_bg10"
                android:backgroundTint="@color/colorPrimary"
                style="@style/MyCustomTabLayout"
                app:tabIndicatorGravity="stretch"
                app:tabMaxWidth="0dp"
                app:tabGravity="fill"
                app:tabMode="fixed"
                app:tabSelectedTextColor="@color/colorPrimary"
                app:tabTextColor="@color/colorWhite"
                app:tabTextAppearance="@style/MyCustomTextAppearance"
                app:layout_constraintTop_toBottomOf="@+id/view">

            <com.google.android.material.tabs.TabItem
                android:id="@+id/tabitem_sedan"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sedan" />

            <com.google.android.material.tabs.TabItem
                android:id="@+id/tabitem_comtrans"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/comtr" />

            <com.google.android.material.tabs.TabItem
                android:id="@+id/tabitem_moto"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/moto" />

        </com.google.android.material.tabs.TabLayout>
        <!--    !!!todo ViewPager!!!    -->
        <androidx.viewpager.widget.ViewPager
            android:id="@+id/tr_viewPager"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_constraintTop_toBottomOf="@id/tab_layout"
            android:layout_marginTop="20dp"/>

        <TableLayout
            android:id="@+id/table_tr"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16dp"
            android:layout_marginTop="20dp"
            android:background="@drawable/button_bg10"
            android:backgroundTint="@color/colorWhite"
            app:layout_constraintTop_toBottomOf="@+id/tr_viewPager">

            <EditText
                android:id="@+id/inputText1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/colorWhite"
                android:drawableEnd="@drawable/ic_car"
                android:hint="@string/mark_model"
                android:padding="15dp" />

            <View
                android:layout_width="wrap_content"
                android:layout_height="1dp"
                android:layout_marginHorizontal="13dp"
                android:background="@android:color/darker_gray" />

            <EditText
                android:id="@+id/inputText2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/colorWhite"
                android:drawableEnd="@drawable/ic_settings"
                android:hint="@string/parametrs"
                android:padding="15dp" />

        </TableLayout>

        <androidx.cardview.widget.CardView
            android:id="@+id/Relat_img"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16dp"
            android:layout_marginTop="20dp"
            android:background="@drawable/button_bg"
            android:backgroundTint="#EBEDEE"
            app:layout_constraintTop_toBottomOf="@+id/table_tr">

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="128dp"
                android:layout_height="110dp"
                android:scaleType="fitStart"
                android:src="@drawable/img"/>

            <TextView
                android:layout_width="166dp"
                android:layout_height="56dp"
                android:layout_marginStart="50dp"
                android:layout_gravity="center"
                android:text="@string/text_P"
                android:textAppearance="@style/textView2" />

        </androidx.cardview.widget.CardView>

        <!--    todo endToEndOf и startStartOf не нужны если стоит layout_width=match_parent    -->
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:background="@color/colorWhite"
            app:layout_constraintTop_toBottomOf="@+id/Relat_img">

            <TextView
                android:id="@+id/textView3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                android:text="@string/title_city"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageView
                android:id="@+id/imageView9"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                android:src="@drawable/ic_baseline_favorite_border_24"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recycler_view"
                android:layout_width="match_parent"
                android:layout_height="85dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="20dp"
                tools:listitem="@layout/list_view"
                android:orientation="horizontal"
                android:padding="5dp"
                android:scrollbars="horizontal"
                app:layout_constraintTop_toBottomOf="@+id/textView3" />

            <TextView
                android:id="@+id/textView2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="16dp"
                android:layout_marginTop="12dp"
                android:text="@string/car_title"
                android:textAppearance="@style/textView2"
                android:textStyle=""
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/recycler_view" />


            <TextView
                android:id="@+id/textView5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="12dp"
                android:text="@string/title_price_car"
                android:textAppearance="@style/textView5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView2" />

            <TextView
                android:id="@+id/txt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="12dp"
                android:background="@drawable/button_bg"
                android:backgroundTint="@color/frame"
                android:padding="8dp"
                android:text="Рассрочка 0% на 1 год"
                android:textColor="@color/colorWhite"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView5" />

            <View
                android:id="@+id/viewline"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="12dp"
                android:layout_marginEnd="16dp"
                android:background="@android:color/darker_gray"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/txt" />

            <TextView
                android:id="@+id/textView6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="12dp"
                android:layout_marginBottom="16dp"
                android:text="@string/time_lastview"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/viewline" />

            <ImageView
                android:id="@+id/imageView10"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="32dp"
                android:layout_marginTop="12dp"
                android:src="@drawable/ic_baseline_remove_red_eye_24"
                app:layout_constraintStart_toEndOf="@+id/textView6"
                app:layout_constraintTop_toBottomOf="@+id/viewline" />

            <TextView
                android:id="@+id/textView7"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="6dp"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="16dp"
                android:text="@string/viewer_incard"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toEndOf="@+id/imageView10"
                app:layout_constraintTop_toBottomOf="@+id/viewline" />


            <ImageView
                android:id="@+id/imageView8"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:layout_marginEnd="16dp"
                android:layout_marginBottom="16dp"
                android:src="@drawable/ic_baseline_more_horiz_24"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/viewline" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>


</ScrollView>
