<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/colorBackground"
    tools:context=".ui.transport.transport_frg.MotoFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/moto_constraintview"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorWhite"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/title_transport"
            android:textAppearance="@style/txt_title_b"
            android:textColor="@color/colorText"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginStart="16dp"
            android:layout_marginTop="5dp"/>

        <TextView
            android:id="@+id/txt_city"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/title_city"
            android:textAppearance="@style/label"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginEnd="16dp"
            android:layout_marginTop="5dp"/>

        <EditText
            android:id="@+id/search_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16dp"
            android:layout_marginVertical="10dp"
            android:paddingStart="12dp"
            android:paddingEnd="12dp"
            android:paddingVertical="8dp"
            android:background="@drawable/button_bg10"
            android:backgroundTint="@color/colorBackground"
            android:hint="@string/search_text"
            android:drawableStart="@drawable/ic_baseline_search_24"
            app:layout_constraintBottom_toBottomOf="@+id/moto_constraintview"
            app:layout_constraintTop_toBottomOf="@+id/textView">

        </EditText>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <com.google.android.material.tabs.TabLayout
        android:id="@+id/tab_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/button_bg10"
        android:backgroundTint="@color/colorPrimary"
        style="@style/MyCustomTabLayout"
        app:tabIndicatorGravity="stretch"
        app:tabMaxWidth="0dp"
        app:tabGravity="fill"
        app:tabMode="fixed"
        app:tabSelectedTextColor="@color/colorPrimary"
        app:tabTextColor="@color/colorWhite"
        app:tabTextAppearance="@style/MyCustomTextAppearance"
        app:layout_constraintTop_toBottomOf="@+id/moto_constraintview">

        <com.google.android.material.tabs.TabItem
            android:id="@+id/tabitem_sedan"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:focusable="true"
            android:text="@string/sedan" />

        <com.google.android.material.tabs.TabItem
            android:id="@+id/tabitem_comtrans"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/comtr" />

        <com.google.android.material.tabs.TabItem
            android:id="@+id/tabitem_moto"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/moto" />

    </com.google.android.material.tabs.TabLayout>

    <!--  todo писать понятные id  -->
    <HorizontalScrollView
        android:id="@+id/moto_hrscroll"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="23dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tab_layout">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/moto_img"
                android:layout_width="70dp"
                android:layout_height="54dp"
                android:src="@drawable/moto"
                android:layout_marginStart="46dp"
                android:layout_marginTop="5dp"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"/>

            <TextView
                android:id="@+id/moto_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Мотоциклы"
                android:layout_marginStart="46dp"
                android:layout_marginTop="20dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"/>

            <ImageView
                android:id="@+id/skuter_img"
                android:layout_width="70dp"
                android:layout_height="54dp"
                android:src="@drawable/mot0o"
                android:layout_marginStart="73dp"
                android:layout_marginTop="5dp"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toEndOf="@+id/moto_img"/>

            <TextView
                android:id="@+id/skuter_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="70dp"
                android:layout_marginTop="20dp"
                android:text="Скутеры"
                app:layout_constraintStart_toEndOf="@+id/moto_text"
                app:layout_constraintTop_toBottomOf="@+id/skuter_img" />

            <!--    todo понятные id(не номера, например image_view_moto или iv_moto) и названия файлов    -->
            <ImageView
                android:id="@+id/motovezdehod_img"
                android:layout_width="70dp"
                android:layout_height="54dp"
                android:src="@drawable/motooo"
                android:layout_marginStart="73dp"
                android:layout_marginTop="5dp"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toEndOf="@+id/skuter_img"/>

            <!--    убрать endToEndOf parent, привязать к img3    -->
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:layout_marginStart="70dp"
                android:text="Мотозвездеходы"
                app:layout_constraintStart_toEndOf="@+id/skuter_text"
                app:layout_constraintTop_toBottomOf="@+id/motovezdehod_img" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </HorizontalScrollView>

    <EditText
        android:id="@+id/inputText1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/button_bg10"
        android:backgroundTint="@color/colorWhite"
        android:hint="@string/parametrs"
        android:drawableEnd="@drawable/ic_settings"
        android:padding="15dp"
        app:layout_constraintTop_toBottomOf="@+id/moto_hrscroll"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="20dp"
        android:layout_marginHorizontal="16dp"/>


</androidx.constraintlayout.widget.ConstraintLayout>